# vibecraft

./: .clippy.toml  .gitignore  AGENTS.md  COMMANDS.md  Cargo.toml  ISSUES.md  MINECRAFT.md  MINECRAFT_TERRAIN_GEN.md  NETWORK_PROTOCOL.md  PLAN.md  README.md  RENDER_CHECK.md  opencode.jsonc  vibecraft.example.json
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/plans/: real-item-textures.md  worldgen-parity.md
docs/specs/: dropped-item-billboards.md  item-texture-system.md  overworld-parity.md  worldgen-target.md
server-world/: level.json
server-world2/: level.json
src/: chat.rs  config.rs  gamemode.rs  lib.rs  main.rs  profiler.rs
src/assets/: blockstate.rs  gui_atlas.rs  item_atlas.rs  lang.rs  mod.rs  model.rs  reader.rs  texture_map.rs
src/engine/: audio.rs  camera.rs  input.rs  mod.rs  renderer.rs  text.rs  window.rs
src/inventory/: item.rs  mod.rs  progression.rs
src/network/: client.rs  mod.rs  server.rs
src/player/: mod.rs  status_effect.rs
src/shaders/: break.wgsl  chunk.wgsl  fullscreen.wgsl  gui.wgsl  highlight.wgsl  item_billboard.wgsl  sky.wgsl  sky_gradient.wgsl  text.wgsl
src/ui/: mod.rs
src/world/: block.rs  block_registry.rs  chunk.rs  chunk_manager.rs  coordinates.rs  dropped_item.rs  entity.rs  generation.rs  mesh.rs  mod.rs  persistence.rs  raycast.rs  simulation.rs  world_gen.rs
tools/worldgen_oracle/: InProcessWorldgenOracle.java  WorldgenFixtureExporter.java  generate.sh  (+1 more)
world/: level.json  player.json
(+27 files in other folders)
